--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "deepeyes-shop-webclient",
+  "name": "spotify-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.9.3",
+    "@mui/system": "^5.16.4",
     "@openfonts/rubik_all": "^1.44.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,8 +23,12 @@
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.19",
+    "husky": "^9.1.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.4"
   }
 }
