--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@mui/material": "^5.16.5",
     "@mui/system": "^5.16.5",
     "@openfonts/rubik_all": "^1.44.1",
+    "@tanstack/react-router": "1.15.19",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tanstack/router-vite-plugin": "1.15.20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
