--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/system": "^5.16.5",
     "@openfonts/rubik_all": "^1.44.1",
     "@tanstack/react-router": "1.15.19",
+    "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
